--- a/HTML-CSS/MusicPage/Music.css
+++ b/HTML-CSS/MusicPage/Music.css
@@ -1,5 +1,5 @@
-body, html
-{
+body,
+html {
     height: 100%;
     margin: 0;
     font-size: 16px;
@@ -7,14 +7,20 @@ body, html
     line-height: 1.8em;
     font-weight: 400;
     color: #666;
-}footer {
-    text-align: center;
-    padding: 3px;
-    background-color: gray;
+}
+
+.sec5 .footer {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    background-color: #1B1B1B;
     color: white;
-  }
-.txt
-{
+    text-align: center;
+
+}
+
+.txt {
     position: absolute;
     top: 30%;
     width: 100%;
@@ -22,27 +28,31 @@ body, html
     color: #000;
     font-size: 40px;
     letter-spacing: 8px;
-    
+
 }
-.txt .border
-{
-   
+
+.txt .border {
+
     color: #fff;
     padding: 20px;
 
 }
-.txt .border.trans{
+
+.txt .border.trans {
     background-color: transparent;
 }
-.img1,.img2,.img3
-{
+
+.img1,
+.img2,
+.img3 {
     position: relative;
-   
+
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
 }
+
 .text {
     position: absolute;
     top: 75%;
@@ -51,31 +61,48 @@ body, html
     color: #fff;
     font-size: 27px;
     letter-spacing: 8px;
- 
+
 }
-.img1
-{
+
+.img1 {
     background-image: url('1.jpg');
-    min-height:100%;
+    min-height: 100%;
 }
-.section
-{
+
+.section {
     text-align: center;
     padding: 50px 80px;
 }
-.sec1
-{
+
+.sec1 {
     background-color: rgb(70, 68, 68);
     color: #fff;
 }
-.sec2{
+
+.sec2 {
     background-color: white;
 }
-.sec3{
+
+.sec3 {
     background-image: url(3.jpg);
     color: white;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+
+.sec4 {
+    overflow: auto;
+}
+
+.sec4 img {
+    float: left;
+
+}
+
+.sec5 {
+
+    position: relative;
 }
 
 ul {
@@ -86,7 +113,7 @@ ul {
     background-color: black;
     position: fixed;
     width: 100%;
-    
+
 }
 
 li {
@@ -112,6 +139,7 @@ li p {
     margin-left: 10px;
 
 }
+
 .button {
     background-color: rgb(160, 10, 10);
     border: none;
@@ -123,9 +151,133 @@ li p {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
-  img {
+}
+
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+}
+
+@media (max-height:800px) {
+    footer {
+        position: static;
+    }
+}
+
+
+.footer-distributed {
+    background-color: #2c292f;
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
+    font: bold 16px sans-serif;
+    padding: 50px 50px 60px 50px;
+    margin-top: 80px;
+    
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center
+{
+    display: inline-block;
+    vertical-align: top;
+}
+
+
+
+.footer-distributed .footer-left {
+    width: 30%;
+}
+
+.footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px 'Cookie', cursive;
+    margin: 0;
+}
+
+
+
+.footer-distributed .footer-left img {
+    width: 30%;
+}
+
+.footer-distributed h3 span {
+    color: #e0ac1c;
+}
+
+
+
+.footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+}
+
+.footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+    color: #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+
+
+.footer-distributed .footer-center {
+    width: 35%;
+    padding: 20px;
+}
+
+
+
+.footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+    color: #e0ac1c;
+    text-decoration: none;
+    ;
+}
+
+
+
+
+
+@media (max-width: 880px) {
+
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .footer-distributed .footer-center i {
+        margin-left: 0;
+    }
+
+}
