--- a/HTML-CSS/Photography/Photography.css
+++ b/HTML-CSS/Photography/Photography.css
@@ -5,7 +5,7 @@ body {
     font-family: sans-serif;
     line-height: 1.8em;
     font-weight: 400;
-    color: #666;
+    color: #1B1B1B;
 
 }
 
@@ -13,17 +13,38 @@ h2 {
     text-align: center;
     color: gray;
 }
+
 .text {
     position: absolute;
-    top: 60%;
+    top: 38%;
     width: 100%;
     text-align: center;
-    color: white;
-    font-size: 27px;
+
+
+}
+
+.button {
+    background-color: transparent;
+    border: 1px solid #000;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
     letter-spacing: 8px;
     text-transform: uppercase;
     font-weight: bold;
+    border-radius: 20px;
+    transition-duration: 0.4s;
 }
+.button:hover{
+    background-color: black;
+    color: white;
+}
+
 div.polaroid {
     width: 32%;
     background-color: white;
@@ -44,10 +65,10 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
     position: relative;
     width: 100%;
-    
+
 }
 
 li {
@@ -63,7 +84,7 @@ li a {
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: gray;
 }
 
 li p {
@@ -82,12 +103,12 @@ li p {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 .txt {
     position: absolute;
-    top: 50%;
+    top: 30%;
     width: 100%;
     text-align: center;
     color: #000;
@@ -97,21 +118,34 @@ li p {
 }
 
 .txt .border {
-   
+    width: fit-content;
     color: #fff;
     padding: 20px;
 
 }
 
-.txt .border.trans {
-    background-color: transparent;
-}
+
 .footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: gray;
+    background-color: #1B1B1B;
     color: white;
     text-align: center;
- }
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    ;
+}
+
+.flex-container>div {
+    background-color: #f1f1f1;
+    width: 100%;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+
+}
