JS Assignment Part 1

--- a/HTML-CSS/Personal Portfolio/Portfolio.css
+++ b/HTML-CSS/Personal Portfolio/Portfolio.css
@@ -165,6 +165,9 @@ nav a:hover{
 nav a:visited{
     color: coral;
 }
+nav a:link{
+    color: coral;
+}
 div.polaroid {
     width: 32%;
     background-color: white;
